@@ -26,6 +26,7 @@ SubVersion: $Id$
 	- [roms]  $2611: optimized displaying of code window by refreshing ROM calls just once
 	- [kevin] $2620: made zlib non-optional now that libtifiles2 requires it anyway
 	- [roms]  $2624: allow double-clicking of a ROM instead of selecting + pressing OK button
+	- [kevin] $2629: fixed GDB build with the upcoming glibc 2.7 (patch from Fedora GDB by Jan Kratochvil)
 
 - 16/03/2007, version 3.00
 	- [kevin] $2389: don't use \n in the breakpoint window status bar
